2014-02-01  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #83 Test 'standard_name' attribute for "longitude" and "latitude" values

2014-01-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: fxm
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Crude implementation of cnk_map=rew

2014-01-31  Pedro Vicente  <pvicente@uci.edu>

	* nco_cnv_cf_cll_mth_add() Add cell_methods attributes (create mode)

	* Add ncwa regression #58 Add cell_methods attributes (create mode)

2014-01-30  Pedro Vicente  <pvicente@uci.edu>

	* nco_chk_dmn(): Check valid input dimension name (used for --fix_rec_dmn)
	Make group table construction function return NCO_CHK_NOERR or NCO_CHK_ERR

2014-01-30  Charlie Zender  <zender@uci.edu>

	* Improve REC_APN documentation

2014-01-29  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #86 Change record dimension to fixed dimension --fix_rec_dmn

2014-01-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.1 release procedure:
 	Changes since nco-4_4_0: -X grp, cnk_dmn grp, ncra_no_fl_close bugfix
	cd ~/nco;cvs tag -d nco-4_4_1;cvs tag -d nco-4_4_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.1 release"
	cvs tag -c nco-4_4_1;cvs tag -c nco-4_4_1-1

	* Verified ./configure works on Intel compilers on greenplanet, and
	bld/Makefile works on Intel compilers on yellowstone, and all regressions pass

	* Revert nco_close() and nco_fl_rm() to intended location within ncra.c file loop
	Fixes important bug since multi-file operator was not closing/removing input files
	Bug committed in ncra.c revision 1.430 on 20131107 thus affects	NCO 4.3.9-4.4.0.

	* Remove expected return value from free() in strcasecmp() for Mac OS 10.9 LLVM compatibility

2014-01-27  Pedro Vicente  <pvicente@uci.edu>
